<resources>
    <string name="app_name">MTS</string>

    <string name="home_frag">HOME PAGE</string>

    <string name="map_frag">MAP PAGE</string>

    <string name="fav_frag">FAVORITE PAGE</string>

    <string name="lines_frag">LINES PAGE</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="map_201_string">201</string>
    <string name="filter_string">Filter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_maps">Search maps..</string>
    <string name="title_activity_stop">StopActivity</string>

</resources>
