<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp1">
        <item
            android:id="@+id/home_frag"
            android:icon="@drawable/ic_home"
            android:title="Home" />
    </group>

    <group android:id="@+id/grp2">
        <item
            android:id="@+id/map_frag"
            android:icon="@drawable/ic_map"
            android:title="Map" />
    </group>

    <group android:id="@+id/grp3">
        <item
            android:id="@+id/fav_frag"
            android:icon="@drawable/ic_fav"
            android:title="Favorites" />
    </group>

    <group android:id="@+id/grp4">
        <item
            android:id="@+id/lines_frag"
            android:icon="@drawable/ic_lines"
            android:title="Lines" />
    </group>

</menu>