<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.daniel.mts.MapFragment">

    <Button
        android:id="@+id/map_button_template"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:paddingBottom="15dp"
        android:paddingLeft="60dp"
        android:paddingRight="40dp"
        style="?android:attr/borderlessButtonStyle"
    />

    <ImageView
        android:id="@+id/icon_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/mtsicon"
        android:layout_alignParentRight="true"
        />

    <ImageView
        android:id="@+id/map_image"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:adjustViewBounds="true"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:maxWidth="42dp"
        android:maxHeight="42dp"
        android:scaleType="fitCenter"
        android:layout_below="@+id/map_button_template"
        android:layout_gravity="center"
        android:src="@drawable/map201"
       />

</FrameLayout>
