<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_display_stops"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.daniel.mts.DisplayListOfStops">

    </RelativeLayout>
    <!-- This LinearLayout represents the contents of the screen  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- The toolbar displayed at the top -->
        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/stop_tool"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/txtitem"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:textSize="20sp"
                android:gravity="center"
                android:background="@drawable/circle"
                android:layout_weight = "0"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight = "1"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:id="@+id/nameItem"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_marginBottom="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="left" />

                <TextView
                    android:id="@+id/direction"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_marginBottom="10dp"
                    android:textSize="18sp"
                    android:gravity="left" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/reverse"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/reverse"
                android:background="@android:color/transparent"
                android:layout_gravity="right"
                android:layout_weight = "0"
                android:onClick="onClick"
                android:clickable="true" />
        </LinearLayout>


        <!-- The main content view where fragments are loaded -->
        <FrameLayout
            android:id="@+id/flContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <!-- The navigation drawer that comes from the left -->
    <!-- android:layout_gravity needs to be set to 'start' -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nvView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header" />
</android.support.v4.widget.DrawerLayout>

