<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="horizontal" android:layout_width="match_parent"
android:layout_height="60dp"
android:weightSum="1"
    android:id="@+id/stopLayout">

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/stoptxt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:textSize="20sp"
        android:gravity="center_vertical"
        />
</LinearLayout>